v2.6.9.2 fixed aligncenter styling and removed superflupous gtm related amp-analytics in head

--- a/assets/css/src/_wp-custom.css
+++ b/assets/css/src/_wp-custom.css
@@ -42,7 +42,7 @@
 }
 
 	}
-	.aligncenter {
+	.ctaButtonLink.aligncenter {
 		clear: both;
 		display: block;
 		margin-left: auto;
